# repo-mirror

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.cargo/: config
.fleet/: Dockerfile  run.json
public/: index.html
src/: main.rs  repos.rs  server.rs
ui/: .npmrc  package.json
ui/src/: App.js
ui/src/components/repository/: Repository.css  Repository.js  RepositoryList.js
ui/src/utils/: useAsyncEffect.js
