[package]
name = "repo-mirror"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.13.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.13.0"
anyhow = "1.0.52"
log = "0.4.14"
env_logger = "0.9.0"
clap = { version = "3.0.5", features = ["derive"] }
poem = { version = "1.2.9", features = ["static-files"] }
poem-openapi = { version = "1.2.9", features = ["swagger-ui"]}
tokio = { version = "1.12.0", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.2.24"
diesel = { version = "1.4", features = ["sqlite"] }
tracing = "0.1.29"

[patch.crates-io]
barrel = { git = "https://github.com/hamflx/barrel.git", rev = "v0.6.5-fix" }
